# borsa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile
borsa/: Cargo.toml  README.md
borsa-core/: Cargo.toml  README.md
borsa-core/src/: connector.rs  error.rs  lib.rs  middleware.rs  stream.rs  types.rs
borsa-core/src/timeseries/: infer.rs  merge.rs  mod.rs  resample.rs  util.rs
borsa-core/tests/: currency_invariants.proptest-regressions  currency_invariants.rs  dedup_props.rs  errors.rs  interval_infer.proptest-regressions  interval_infer.rs  loom_stream_handle.rs  merge_props.proptest-regressions  merge_props.rs  resample_props.proptest-regressions  resample_props.rs  stream_handle.rs
borsa-macros/: Cargo.toml
borsa-macros/src/: lib.rs
borsa-macros/src/middleware/: mod.rs  parse.rs
borsa-middleware/: Cargo.toml  README.md
borsa-middleware/src/: blacklist.rs  builder.rs  cache.rs  lib.rs  quota.rs
borsa-middleware/tests/: blacklisting_middleware.rs  cache_basic.rs  cache_builder_ordering.rs  cache_keys.rs  cache_lru.rs  cache_negative.rs  cache_ttl.rs  macro_introspection.rs  middleware_validation.rs  pass_through.rs  quota_integration.rs  quota_should_allow_call.rs  quota_slice_alignment.rs  rate_limit_heuristic.rs
borsa-mock/: Cargo.toml  README.md
borsa-mock/src/: dynamic.rs  lib.rs
borsa-mock/src/fixtures/: analysis.rs  calendar.rs  esg.rs  fundamentals.rs  history.rs  mod.rs  news.rs  options.rs  profile.rs  quotes.rs  search.rs
borsa-mock/tests/: dynamic_mock.rs
borsa-types/: Cargo.toml  README.md
borsa-types/src/: attribution.rs  capability.rs  config.rs  connector.rs  error.rs  lib.rs  middleware.rs  reports.rs  routing_policy.rs
borsa-types/tests/: quota_serde.rs  reports.rs  routing_policy_serde.rs
borsa-yfinance/: Cargo.toml  README.md
borsa-yfinance/src/: adapter.rs  builder.rs  lib.rs
borsa-yfinance/tests/: analysis_injection.rs  balance_sheet_injection.rs  calendar_injection.rs  capabilities.rs  cashflow_injection.rs  earnings_injection.rs  error_normalization.rs  esg_injection.rs  fundamentals_capability.rs  history_injection.rs  history_validate.rs  holders_injection.rs  income_stmt_injection.rs  isin_injection.rs  news_injection.rs  options_injection.rs  profile_capability.rs  profile_injection.rs  quote_injection.rs  quote_not_found_maps.rs  rate_limited_builder.rs  search_capability.rs  search_injection.rs  stream_leak.rs  supports_kind.rs
borsa/examples/: 00_tracing.rs  01_simple_quote.rs  02_history_merge.rs  03_search.rs  04_price_target.rs  05_options_chain.rs  06_fundamentals_deep_dive.rs  07_financial_snapshot.rs  08_history_resampling.rs  09_stock_comparison.rs  10_analyst_recommendations.rs  11_upcoming_events.rs  12_per_symbol_priority.rs  13_fetch_strategies.rs  15_routing_policy_exchange_and_strict.rs  16_yf_rate_limited.rs  17_streaming.rs  18_holders.rs  19_news.rs  20_esg.rs  21_download_builder.rs  22_multi_quotes.rs  23_dataframe.rs  24_quota_middleware.rs
borsa/examples/common/: mod.rs
borsa/src/: attrib.rs  core.rs  lib.rs
borsa/src/router/: analysis.rs  download.rs  esg.rs  fundamentals.rs  history.rs  holders.rs  info.rs  macros.rs  mod.rs  news.rs  options.rs  profile.rs  quotes.rs  search.rs  stream.rs  util.rs
borsa/src/router/streaming/: backoff.rs  controller.rs  error.rs  filters.rs  mod.rs  planner.rs  session.rs  supervisor_sm.rs
borsa/tests/: blacklist_handling.rs  dataframe_history.rs  dataframe_quote.rs  router.rs  router_util.rs
borsa/tests/helpers/: mock_connector.rs  mod.rs
borsa/tests/router/analysis/: router_analysis_not_found.rs  router_analysis_price_target.rs  router_analysis_recommendations.rs  router_analysis_recommendations_summary.rs  router_analysis_upgrades_downgrades.rs
borsa/tests/router/calendar/: router_calendar.rs
borsa/tests/router/core/: router_fetch_strategies.rs  router_policy_tiebreak.rs  router_priority.rs
borsa/tests/router/download/: router_download.rs
borsa/tests/router/esg/: router_esg.rs
borsa/tests/router/fundamentals/: router_balance_sheet.rs  router_cashflow.rs  router_income_statement.rs
borsa/tests/router/history/: router_history_attribution.rs  router_history_auto_resample.rs  router_history_empty_is_skipped.rs  router_history_fallback.rs  router_history_interval_largest_divisor.rs  router_history_interval_passthrough.rs  router_history_interval_reject_non_divisible.rs  router_history_interval_rounddown_resample.rs  router_history_interval_weekly_fallback.rs  router_history_merge.rs  router_history_merge_strategy.rs  router_history_not_found.rs  router_history_prefer_adjusted.rs  router_history_raw_close.rs  router_history_resample_daily.rs  router_history_resample_weekly.rs  router_history_unsupported.rs  router_history_validate.rs
borsa/tests/router/holders/: router_holders.rs
borsa/tests/router/news/: router_news.rs
borsa/tests/router/options/: router_option_chain.rs  router_options_expirations.rs
borsa/tests/router/profile/: router_info.rs  router_info_middleware.rs
borsa/tests/router/quotes/: router_kind_filter_quote.rs  router_quote.rs  router_quote_concurrency.rs  router_quote_not_found.rs  router_quote_per_kind_priority.rs  router_quote_provider_hot_swap.rs  router_quote_unsupported.rs  router_quotes_fallback.rs  router_quotes_multi.rs
borsa/tests/router/search/: router_search_kind_filter.rs  router_search_limit.rs  router_search_priority.rs  router_search_unsupported.rs
borsa/tests/router/stream/: downstream_drop_prop.rs  (+27 more)
borsa/tests/streaming/: backoff.rs  filters_monotonic.rs  supervisor_sm_tests.rs
examples/: Cargo.toml
examples/examples/: 00_tracing.rs  01_simple_quote.rs  02_history_merge.rs  03_search.rs  04_price_target.rs  05_options_chain.rs  06_fundamentals_deep_dive.rs  07_financial_snapshot.rs  08_history_resampling.rs  09_stock_comparison.rs  10_analyst_recommendations.rs  11_upcoming_events.rs  12_per_symbol_priority.rs  13_fetch_strategies.rs  14_merge_strategies.rs  16_yf_rate_limited.rs
examples/src/: common.rs
examples/tests/: run_examples.rs
(+8 files in other folders)
