[workspace]
resolver = "2"
members = [
    "borsa",
    "borsa-core",
    "borsa-yfinance",  
    "examples",
    "borsa-mock",
]

[workspace.package]
version = "0.1.2"
authors = ["Giovanni Ramistella <contact@borsa.rs>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/borsaorg/borsa"

[workspace.dependencies]
# List common dependencies here to unify versions
tokio = { version = "1" }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
alpha_vantage = "0.11.0"
async-trait = "0.1"
bitflags = "2"

paft = { version = "0.5.1", features = ["market", "fundamentals", "aggregates"] }
yfinance-rs = { version = "0.5.1" }
chrono = "0.4.42"
chrono-tz = "0.10"
rust_decimal = "1.36"
futures = "0.3"
polars = "0.51"
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0"
quote = "1.0.41"
reqwest = "0.12.24"
syn = "2.0"
base64 = "0.22"
futures-util = "0.3"
prost = "0.14"
prost-build = "0.14"
rand = "0.9.2"
serde_json = "1.0.145"
tokio-tungstenite = "0.27"
url = "2.5"
cmc = "0.4.4"
proptest = "1.8.0"
loom = { version = "0.7.2", default-features = false }


borsa-yfinance = { path = "borsa-yfinance", version = "0.1.2" }
borsa-core = { path = "borsa-core", version = "0.1.2" }
borsa = { path = "borsa", version = "0.1.2" }
borsa-mock = { path = "borsa-mock", version = "0.1.2" }

trybuild = "1.0.112"
tokio-test = "0.4.4"
httpmock = "0.8.2"
assert_cmd = "2.0.16"
predicates = "3.1.2"
