[package]
name = "borsa-macros"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/borsaorg/borsa"
description = "Proc macros for the Borsa ecosystem: middleware delegation and more"
readme = "README.md"
keywords = ["borsa", "finance", "stocks", "macros", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers", "api-bindings", "finance"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
proc-macro-crate = "3.4.0"

