[package]
name = "borsa-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for the Borsa ecosystem: middleware delegation and more"
readme = "README.md"
documentation = "https://docs.rs/borsa-macros"
keywords = ["borsa", "finance", "stocks", "macros", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers", "api-bindings", "finance"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true , features = ["full", "parsing"] }
proc-macro-crate = { workspace = true }

