[package]
name = "borsa-middleware"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Middleware wrappers for Borsa connectors (e.g., quota-aware wrappers)"
readme = "README.md"
repository = "https://github.com/borsaorg/borsa"
homepage = "https://github.com/borsaorg/borsa"
documentation = "https://docs.rs/borsa-middleware"
keywords = ["middleware", "borsa", "finance", "stocks", "trading"]
categories = ["api-bindings", "finance", "web-programming::http-client"]

[dependencies]
borsa-core = { workspace = true }
borsa-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde_json = { workspace = true }
borsa-macros = { workspace = true }

[dev-dependencies]
borsa-mock = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

