[package]
name = "borsa-middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Middleware wrappers for Borsa connectors (e.g., quota-aware wrappers)"
readme = "README.md"
documentation = "https://docs.rs/borsa-middleware"
keywords = ["middleware", "borsa", "finance", "stocks", "trading"]
categories = ["api-bindings", "finance", "web-programming::http-client"]

[features]
default = []
tracing = ["dep:tracing", "borsa-core/tracing"]

[dependencies]
borsa-core = { workspace = true }
borsa-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde_json = { workspace = true }
borsa-macros = { workspace = true }
moka = { workspace = true, features = ["future"] }
tracing = { workspace = true, optional = true }

[dev-dependencies]
borsa-mock = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

