[package]
name = "borsa-mock"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
borsa-core = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

