[package]
name = "borsa-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared Borsa-specific data transfer objects built on top of paft."
documentation = "https://docs.rs/borsa-types"
readme = "README.md"
keywords = ["finance", "types", "borsa", "api", "data"]
categories = ["api-bindings", "finance", "data-structures"]

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
paft = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
