[package]
name = "borsa-yfinance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Yahoo Finance API connector for the borsa financial data ecosystem with comprehensive market data and streaming support."
readme = "README.md"
documentation = "https://docs.rs/borsa-yfinance"
keywords = ["finance", "yahoo-finance", "api", "market-data", "stocks"]
categories = ["api-bindings", "finance", "web-programming::http-client"]

[features]
default = []
test-adapters = []
tracing = ["dep:tracing", "borsa-core/tracing"]

[dependencies]
borsa-core = { workspace = true }
yfinance-rs = { workspace = true }
borsa-middleware = { workspace = true }
borsa-types = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rust_decimal = { workspace = true }
