[package]
name = "borsa"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "High-level, pluggable market data API for Rust with multi-provider support."
readme = "README.md"
repository.workspace = true
homepage = "https://github.com/borsaorg/borsa"
documentation = "https://docs.rs/borsa"
keywords = ["finance", "stocks", "trading", "api", "market-data"]
categories = ["api-bindings", "finance", "web-programming::http-client"]

[features]
default = []
dataframe = ["borsa-core/dataframe"]
tracing = ["dep:tracing", "borsa-core/tracing", "borsa-middleware/tracing"]

[dependencies]
borsa-core = { workspace = true }
borsa-types = { workspace = true }
borsa-middleware = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
rand = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true, optional = true }


[dev-dependencies]
rust_decimal = { workspace = true }
# enable multi-thread runtime for examples and tests
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
borsa-mock = { workspace = true }
# examples-only deps
borsa-yfinance = { workspace = true }
tracing-subscriber = { workspace = true }
proptest = { workspace = true }
tokio-test = { workspace = true }
