[package]
name = "borsa-examples"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
borsa = { workspace = true }
borsa-core = { workspace = true }
borsa-yfinance = { workspace = true }
borsa-mock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
async-trait = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true, optional = false }
predicates = { workspace = true, optional = false }
